[package]
name = "rmk-display"
version = "0.1.0"
edition = "2024"

[dependencies]
kolibri-embedded-gui = "=0.1.0"
rmk = { version = "0.7.8", features = ["controller"] }
defmt = { version = "1.0", optional = true }
embedded-graphics = "0.8"
memory-lcd-spi = { git = "https://github.com/HaoboGu/memory-lcd-spi.git", branch = "feat/add_const_buf_size", optional = true }
embedded-hal = "1.0.0"
itoa = "1.0.15"

[features]
default = ["defmt"]
defmt = ["dep:defmt"]

nice_view = ["dep:memory-lcd-spi"]
